--- a/c_code/b_layout_test/index.html
+++ b/c_code/b_layout_test/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <script>
-    window.location = "./html/layout_02_result.html";
+    // window.location = "./html/layout_02_result.html";
+    location = "./html/login_layout_01.html";
   </script>
 </head>
 <body>  
