쿠팡로그인페이지 가이드세팅

--- a/c_code/b_layout_test/html/login_layout_01.html
+++ b/c_code/b_layout_test/html/login_layout_01.html
@@ -64,6 +64,12 @@
         <a href="#">회원가입</a>
         <a href="#">아이디 비밀번호 찾기</a>
       </fieldset>
+
+      <input type="checkbox" id="testCheck" class="hidden_context">
+      <label for="testCheck">
+        <i class="far fa-eye"></i>
+        <span class="hidden_context">체크테스트</span>
+      </label>
     </form>
   </div>
   <!-- script -->
