--- a/c_code/b_layout_test/index.html
+++ b/c_code/b_layout_test/index.html
@@ -5,7 +5,8 @@
   <title>Document</title>
   <script>
     // window.location = "./html/layout_02_result.html";
-    location = "./html/login_layout_01.html";
+    // location = "./html/login_layout_01.html";
+    location = "./html/login_layout_02.html";
   </script>
 </head>
 <body>  
