--- a/c_code/b_layout_test/html/login_layout_02.html
+++ b/c_code/b_layout_test/html/login_layout_02.html
@@ -53,6 +53,11 @@
                     입력한 계정의 비밀번호를 입력하세요.</span></label>
                 <input type="password" id="userPw" value="" name="userPw" 
                       required placeholder="비밀번호" />
+
+                <input type="checkbox" id="checkPw" name="checkPw" value="비밀번호 보이게처리 유무" class="hidden_context" />
+                <label for="checkPw"> 
+                  <span class="hidden_context">비밀번호 보이게처리 유무</span>
+                </label>
               </div>
             </li>
           </ul>
