login_layout_02 other

--- a/c_code/b_layout_test/html/login_layout_02.html
+++ b/c_code/b_layout_test/html/login_layout_02.html
@@ -46,6 +46,7 @@
                 <input type="text" id="userId" value="" name="userId" 
                       required placeholder="아이디(이메일)" />
               </div>
+              <p class="data_narr">아이디(이메일)를 입력해주세요.</p>
             </li>
             <li>
               <div class="input_wrap clearfix">
@@ -62,6 +63,7 @@
                   <span class="hidden_context">비밀번호 보이게처리 유무</span>
                 </label>
               </div>
+              <p class="data_narr">비밀번호를 입력해주세요.</p>
             </li>
           </ul>
         </fieldset>
