--- a/c_code/d_javascript/html/content.html
+++ b/c_code/d_javascript/html/content.html
@@ -13,6 +13,9 @@
       <li><a href="./js_insert.html">자바스크립트 코드 삽입위치</a></li>
       <li><a href="./js_01_var.html">변수, 확인</a></li>
       <li><a href="./js_02_dataType.html">문서 자료형</a></li>
+      <li><a href="./js_03_operator.html">연산자</a></li>
+      <li><a href="./js_04_condition.html">조건, 스위치, 삼항연산</a></li>
+      <li><a href="./js_04-1_ifOther.html">비교연산</a></li>
     </ul>
   </div>
 </body>
