--- a/c_code/a_basic/html/contents.html
+++ b/c_code/a_basic/html/contents.html
@@ -16,6 +16,10 @@
     <li><a href="./semantic.html">의미를 부여하는 요소(semantic)</a></li>
     <li><a href="./form_01.html">폼요소 이해하기1</a></li>
     <li><a href="./form_02.html">폼요소 이해하기2 - type속성 및 멀티기능 이해하기</a></li>
+    <li><a href="./iframe.html">외부문서불러오기</a></li>
+    <li><a href="./multimedia.html">음성 및 영상 불러오기</a></li>
+    <li><a href="./multiFull.html">video 풀페이지만들기</a></li>
+
   </ul>
   <hr />
 <!-- ========================================================================= -->
