--- a/c_code/b_layout_test/index.html
+++ b/c_code/b_layout_test/index.html
@@ -6,7 +6,8 @@
   <script>
     // window.location = "./html/layout_02_result.html";
     // location = "./html/login_layout_01.html";
-    location = "./html/login_layout_02.html";
+    // location = "./html/login_layout_02.html";
+    location = "./html/sdf_web.html";
   </script>
 </head>
 <body>  
