--- a/c_code/b_layout_test/html/sdf_web.html
+++ b/c_code/b_layout_test/html/sdf_web.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="../fonts/noto_sans/noto_sans.css">
 
   <!--[if IE]>
-  <script src="../ie/modernizr-custom.js"></script>
-  <script src="../ie/ie11CustomProperties.js"></script>
-  <link rel="stylesheet" href="../css/ie/sdf_web_ie.css">
+    <script src="../ie/modernizr-custom.js"></script>
+    <script src="../ie/ie11CustomProperties.js"></script>
+    <link rel="stylesheet" href="../css/ie/sdf_web_ie.css">
   <![endif]-->
 
   <link rel="stylesheet" href="../css/base/reset.css">
@@ -22,14 +22,81 @@
 <body>
   <!-- layout -->
   <div id="wrap">
-    <header id="headBox"></header>
-    <section id="viewBox"></section>
-    <article id="festivalBox"></article>
-    <article id="cardImageBox"></article>
-    <aside id="otherBox"></aside>
-    <article id="sponsorBox"></article>
-    <article id="newsSearBox"></article>
-    <footer id="footBox"></footer>
+    <header id="headBox">
+      <div class="head_area" role="banner">
+        <h1>서울 디자인 페스티벌</h1>
+      </div>
+      <div class="people_lang_area"></div>
+    </header>
+    <!-- // #headBox -->
+
+    <section id="viewBox">
+      <h2>페스티벌 주요 광고</h2>
+    </section>
+    <!-- #viewBox -->
+
+    <article id="festivalBox">
+      <div class="festival_summary_area">
+        <h2>제19회 서울페스티벌 일정 내용</h2>
+      </div>
+      <div clss="festival_attach_area"></div>
+    </article>
+    <!-- #festivalBox -->
+
+    <article id="cardImageBox">
+      <h2 class="hidden_context">페스티벌 주요 이미지</h2>
+      <div class="card_indicator_area"></div>
+      <div class="card_image_area"></div>
+    </article>
+    <!-- // #cardImageBox -->
+
+    <aside id="otherBox">
+      <div class="pr_area">
+        <h2>서울디자인페스티벌과 함께하는 브랜드 기업과 디자이너</h2>
+      </div>
+      <div class="pr_list_area"></div>
+    </aside>
+    <!-- // #otherBox -->
+
+    <article id="sponsorBox">
+      <h2 class="hidden_context">후원사</h2>
+      <dl class="organized_area">
+        <dt></dt> <dd></dd>
+      </dl>
+      <dl class="managed_area">
+        <dt></dt> <dd></dd>
+      </dl>
+      <dl class="sponsored_area">
+        <dt></dt> <dd></dd>
+      </dl>
+      <dl class="supported_area">
+        <dt></dt> <dd></dd>
+      </dl>
+      <dl class="special_area">
+        <dt></dt> <dd></dd>
+      </dl>
+      <dl class="media_area">
+        <dt></dt> <dd></dd>
+      </dl>
+    </article>
+    <!-- // #sponsorBox -->
+
+    <article id="newsSearchBox">
+      <div class="news_area">
+        <h2>함께해요! 뉴스레터 구독하기</h2>
+        <div class="search_part"></div>
+      </div>
+    </article>
+    <!-- // #newsSearchBox -->
+
+    <footer id="footBox">
+      <div class="info_area">
+        <h2>서울디자인페스티벌 관련 정보</h2>
+      </div>
+      <div class="address_otherlink_area"></div>
+      <div class="individual_area"></div>
+    </footer>
+    <!-- // #footBox -->
   </div>
 
   <!-- script -->
