--- a/c_code/d_javascript/html/content.html
+++ b/c_code/d_javascript/html/content.html
@@ -16,6 +16,7 @@
       <li><a href="./js_03_operator.html">연산자</a></li>
       <li><a href="./js_04_condition.html">조건, 스위치, 삼항연산</a></li>
       <li><a href="./js_04-1_ifOther.html">비교연산</a></li>
+      <li><a href="./js_05_loop.html">반복문</a></li>
     </ul>
   </div>
 </body>
