--- a/c_code/b_layout_test/html/sdf_web.html
+++ b/c_code/b_layout_test/html/sdf_web.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../fonts/fontawesome_5/css/all.css">
-  <link rel="stylesheet" href="../fonts/noto_sans/noto_sans.css">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700&display=swap" rel="stylesheet">
 
   <!--[if IE]>
     <script src="../ie/modernizr-custom.js"></script>
