--- a/c_code/a_basic/html/contents.html
+++ b/c_code/a_basic/html/contents.html
@@ -40,6 +40,7 @@
     <li><a href="./unit_01.html">기본형 단위 - px, pt, %, em, rem</a></li>
     <li><a href="./unit_02.html">기본형 단위 - vw, vh, ch</a></li>
     <li><a href="./mediaQuery_01.html">반응형웹기초 개념잡기</a></li>
+    <li><a href="./mediaQuery_02.html">반응형웹기초 개념잡기2</a></li>
   </ul>
 
 <!-- ========================================================================= -->
