--- a/c_code/d_javascript/html/content.html
+++ b/c_code/d_javascript/html/content.html
@@ -17,6 +17,8 @@
       <li><a href="./js_04_condition.html">조건, 스위치, 삼항연산</a></li>
       <li><a href="./js_04-1_ifOther.html">비교연산</a></li>
       <li><a href="./js_05_loop.html">반복문</a></li>
+      <li><a href="./js_06_function.html">함수1</a></li>
+      <li><a href="./js_07_function_ex1.html">함수기능예제1</a></li>
     </ul>
   </div>
 </body>
