--- a/c_code/d_javascript/html/content.html
+++ b/c_code/d_javascript/html/content.html
@@ -9,7 +9,7 @@
   <hr />
   <div class="part">
     <h2>javascript 기초내용</h2>
-    <ul>
+    <ul> 
       <li><a href="./js_insert.html">자바스크립트 코드 삽입위치</a></li>
       <li><a href="./js_01_var.html">변수, 확인</a></li>
       <li><a href="./js_02_dataType.html">문서 자료형</a></li>
@@ -19,6 +19,12 @@
       <li><a href="./js_05_loop.html">반복문</a></li>
       <li><a href="./js_06_function.html">함수1</a></li>
       <li><a href="./js_07_function_ex1.html">함수기능예제1</a></li>
+    </ul>
+  </div>
+  <div class="part">
+    <h2>DOM</h2>
+    <ul>
+      <li><a href="./dom_01_selector_01.html">js 이용한 선택자</a></li>
     </ul>
   </div>
 </body>
