--- a/c_code/a_basic/html/shadow.html
+++ b/c_code/a_basic/html/shadow.html
@@ -49,9 +49,18 @@
         <li>drop_01</li>
         <li>drop_02</li>
         <li>drop_03</li>
-        <li>drop_04</li>
+        <li><span>drop_04</span></li>
       </ul>
     </div>
+  </div>
+  <div class="part">
+    <h3>배경색상(gradient)만들기</h3>
+    <ul class="gradient">
+      <li>직선형 그라데이션 1</li>
+      <li>직선형 그라데이션 2</li>
+      <li>원형 그라데이션</li>
+      <li>타원형 그라데이션</li>
+    </ul>
   </div>
 
   <!-- script -->
