js array, transition

--- a/c_code/d_javascript/html/content.html
+++ b/c_code/d_javascript/html/content.html
@@ -19,6 +19,7 @@
       <li><a href="./js_05_loop.html">반복문</a></li>
       <li><a href="./js_06_function.html">함수1</a></li>
       <li><a href="./js_07_function_ex1.html">함수기능예제1</a></li>
+      <li><a href="./js_08_array.html">array</a></li>
     </ul>
   </div>
   <div class="part">
