--- a/c_code/a_basic/html/contents.html
+++ b/c_code/a_basic/html/contents.html
@@ -42,6 +42,7 @@
     <li><a href="./mediaQuery_01.html">반응형웹기초 개념잡기</a></li>
     <li><a href="./mediaQuery_02.html">반응형웹기초 개념잡기2</a></li>
     <li><a href="./shadow.html">그림자 만들기 3종세트</a></li>
+    <li><a href="./transition.html">단회성 애니메이션효과 만들기</a></li>
   </ul>
 
 <!-- ========================================================================= -->
