object and sample

--- a/c_code/d_javascript/html/content.html
+++ b/c_code/d_javascript/html/content.html
@@ -20,6 +20,8 @@
       <li><a href="./js_06_function.html">함수1</a></li>
       <li><a href="./js_07_function_ex1.html">함수기능예제1</a></li>
       <li><a href="./js_08_array.html">array</a></li>
+      <li><a href="./js_08_array2.html">array-메소드</a></li>
+      <li><a href="./js_09_object.html">object</a></li>
     </ul>
   </div>
   <div class="part">
