--- a/c_code/c_sample_web/index.html
+++ b/c_code/c_sample_web/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <script>
-    window.location = "./html/gcass_main_imgUse.html";
+    // window.location = "./html/gcass_main_imgUse.html";
+    location = "./html/monfee_main.html";
   </script>
 </body>
 </html>
