--- a/c_code/c_sample_web/html/monfee_main.html
+++ b/c_code/c_sample_web/html/monfee_main.html
@@ -22,14 +22,14 @@
   <!-- layout -->
   <div id="wrap">
     <div class="els_wrap headBox_wrap">
-      <header id="headBox">
-        <h1><a href="./monfee_main.html"><span>monfee</span></a></h1>
+      <header id="headBox" class="clearfix">
+        <h1 class="hidden_wrap"><a href="./monfee_main.html"><span>monfee</span></a></h1>
         <nav id="navBox">
           <h2 class="hidden_context">monfee global navigation</h2>
-          <ul>
+          <ul class="clearfix">
             <li>
               <dl>
-                <dt><a href="">story</a></dt>
+                <dt><a href="#">story</a></dt>
                 <dd>
                   <a href="#">몽피이야기</a>
                   <a href="#">회사소개</a>
@@ -37,7 +37,18 @@
                 </dd>
               </dl>
             </li>
-            <li>menu</li>
+            <li>
+              <dl>
+                <dt><a href="#">menu</a></dt>
+                <dd>
+                  <a href="#">커피류</a>
+                  <a href="#">기타음료</a>
+                  <a href="#">음식 및 디저트</a>
+                  <a href="#">상품</a>
+                  <a href="#">기타</a>
+                </dd>
+              </dl>
+            </li>
             <li>store</li>
             <li>news</li>
           </ul>
