--- a/c_code/c_sample_web/html/monfee_main.html
+++ b/c_code/c_sample_web/html/monfee_main.html
@@ -23,36 +23,7 @@
   <div id="wrap">
     <div class="els_wrap headBox_wrap">
       <header id="headBox" class="clearfix">
-        <h1 class="hidden_wrap"><a href="./monfee_main.html"><span>monfee</span></a></h1>
-        <nav id="navBox">
-          <h2 class="hidden_context">monfee global navigation</h2>
-          <ul class="clearfix">
-            <li>
-              <dl>
-                <dt><a href="#">story</a></dt>
-                <dd>
-                  <a href="#">몽피이야기</a>
-                  <a href="#">회사소개</a>
-                  <a href="#">후원</a>
-                </dd>
-              </dl>
-            </li>
-            <li>
-              <dl>
-                <dt><a href="#">menu</a></dt>
-                <dd>
-                  <a href="#">커피류</a>
-                  <a href="#">기타음료</a>
-                  <a href="#">음식 및 디저트</a>
-                  <a href="#">상품</a>
-                  <a href="#">기타</a>
-                </dd>
-              </dl>
-            </li>
-            <li>store</li>
-            <li>news</li>
-          </ul>
-        </nav>
+        <!-- ./monfee/headBox.html 내부에 내용을 이동 -->
       </header>
     </div>
     <!--// #headBox -->
@@ -99,6 +70,8 @@
   </div>
 
   <!-- script -->
-  <script></script>
+  <script src="../js/base/jquery-3.5.1.js"></script>
+  <script src="../js/base/jquery-ui.js"></script>
+  <script src="../js/src/monfee_main_module.js"></script>
 </body>
 </html>
