--- a/c_code/e_jquery/html/jq_01_selector.html
+++ b/c_code/e_jquery/html/jq_01_selector.html
@@ -17,6 +17,9 @@
   <title>Document</title>
  <link rel="shortcut icon" href="../favicon.png" type="image/png">
  <link rel="apple-touch-icon" href="../favicon.png">
+ <style>
+
+ </style>
 </head>
 <body>
   <!-- layout -->
@@ -29,6 +32,8 @@
       <ul class="list_three">
         <li>list 목록</li>
         <li>list 목록</li>
+        <li>list 목록</li>
+        <li>list 목록</li>
         <li>list 목록
           <ol>
             <li>순서 목록</li>
@@ -37,7 +42,31 @@
         </li>
       </ul>
     </div>
-    <div class="part"></div>
+    <div class="part">
+      <h2>형제, 부모 선택자</h2>
+      <ul class="part_2_list">
+        <li>list_001</li>
+        <li>list_002</li>
+        <li>list_003</li>
+        <li>list_004</li>
+        <li>list_005</li>
+        <li>list_006</li>
+        <li>list_007</li>
+        <li>list_008</li>
+        <li>list_009</li>
+        <li>list_010</li>
+        <li>list_011</li>
+        <li>list_012</li>
+        <li>list_013</li>
+        <li>list_014</li>
+        <li>list_015</li>
+        <li>list_016</li>
+        <li>list_017</li>
+        <li>list_018</li>
+        <li>list_019</li>
+        <li>list_020</li>
+      </ul>
+    </div>
     <div class="part"></div>
     <div class="part"></div>
   </div>
