--- a/c_code/c_sample_web/html/monfee_main.html
+++ b/c_code/c_sample_web/html/monfee_main.html
@@ -28,7 +28,7 @@
     </div>
     <!--// #headBox -->
     <section id="viewBox">
-      <h2 class="hidden_context">monfee 메인 광고</h2>
+      <!-- ./monfee/viewBox.html 문서 호출 -->
     </section>
     <!--// #viewBox -->
     <article id="bestNewsBox">
