--- a/c_code/e_jquery/html/jq_01_selector.html
+++ b/c_code/e_jquery/html/jq_01_selector.html
@@ -67,7 +67,18 @@
         <li>list_020</li>
       </ul>
     </div>
-    <div class="part"></div>
+    <div class="part">
+      <h2>이벤트 및 $(this)</h2>
+      <ul class="evt">
+        <li><a href="#">list event 001</a></li>
+        <li><a href="#">list event 002</a></li>
+        <li><a href="#">list event 003</a></li>
+        <li><a href="#">list event 004</a></li>
+        <li><a href="#">list event 005</a></li>
+        <li><a href="#">list event 006</a></li>
+        <li><a href="#">list event 007</a></li>
+      </ul>
+    </div>
     <div class="part"></div>
   </div>
 
