code insert remove

--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -29,9 +29,17 @@
     </header>
     <hr />
     <article id="contentBox">
-      <h2>선택자 및 CSS처리</h2>
+      <h2>선택자 및 CSS처리, 생성/삭제</h2>
       <ul>
         <li><a href="./jq_01_selector.html">기본 선택자, css사용방법</a></li>
+        <li><a href="./jq_02_showHide.html">선택요소 나타나기 및 사라지기</a></li>
+        <li><a href="./jq_03_makeRemove.html">생성/삭제</a></li>
+
+      </ul>
+      <hr />
+      <h2>샘플 예제</h2>
+      <ul>
+        <li><a href="./ex_01_accordion.html">아코디언메뉴</a></li>
       </ul>
     </article>
 
