monfee_best news

--- a/c_code/c_sample_web/html/monfee_main.html
+++ b/c_code/c_sample_web/html/monfee_main.html
@@ -32,8 +32,24 @@
     </section>
     <!--// #viewBox -->
     <article id="bestNewsBox">
-      <h2 class="hidden_context">monvee 최신 메뉴 및 인기상품</h2>
-
+      <h2>monffee news</h2>
+      <!-- <ul class="clearfix">
+        <li>
+          <a href="#">
+            <div class="news_img"></div>
+            <dl>
+              <dt>Lorem, ipsum.</dt>
+              <dd>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint vero perferendis sunt. Voluptatum nobis eaque vitae reiciendis?</dd>
+            </dl>
+          </a>
+        </li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul> -->
     </article>
     <!--// #bestNewsBox -->
     <article id="issueBox">
