--- a/c_code/c_sample_web/html/monfee_main.html
+++ b/c_code/c_sample_web/html/monfee_main.html
@@ -53,64 +53,7 @@
     </article>
     <!--// #bestNewsBox -->
     <article id="issueBox">
-      <h2 class="hidden_context">monvee  새소식 및 이야기</h2>
-
-      <div class="issue_text">
-        <h3 class="hidden_context">새소식</h3>
-        <div class="issue_indicator">
-          <div class="auto_slide_btn hidden_wrap">
-            <button type="button" class="auto_pause"><span>자동재생 일시정지</span></button>
-            <button type="button" class="auto_play"><span>자동재생 처리</span></button>
-          </div>
-
-          <ul class="check_indi hidden_wrap">            
-            <li><a href="#"><span>issue 내용 요약설명</span></a></li>
-            <li><a href="#"><span>issue 내용 요약설명</span></a></li>
-            <li><a href="#"><span>issue 내용 요약설명</span></a></li>
-            <li><a href="#"><span>issue 내용 요약설명</span></a></li>
-          </ul>         
-        </div>
-        <div class="issue_text_area">
-          <div class="issue_wrap">
-          <ul class="clearfix">
-            <li>
-              <dl>
-                <dt>issue title text 01</dt>
-                <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus id libero maiores ex dicta, laborum doloribus ut ullam vero odit? Doloribus corporis quia, rem fugiat voluptatibus consequatur officiis deserunt magni. ipsum dolor, sit amet consectetur adipisicing elit. Animi beatae ratione, quis ab debitis nesciunt pariatur necessitatibus sit repudiandae in magni, vero voluptate accusantium eveniet dolore quae repellendus consectetur laboriosam! ipsum dolor sit amet consectetur adipisicing elit. Sit temporibus veniam dolore earum reprehenderit, architecto quis dolorum adipisci error doloribus nulla perferendis beatae cum a. Consequatur odio sint obcaecati quidem? ipsum dolor sit amet consectetur, adipisicing elit. Placeat, voluptate.</dd>
-                <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus id libero maiores ex dicta, laborum doloribus ut ullam vero odit? Doloribus corporis quia, rem fugiat voluptatibus consequatur officiis deserunt magni. ipsum dolor, sit amet consectetur adipisicing elit. Animi beatae ratione, quis ab debitis nesciunt pariatur necessitatibus sit repudiandae in magni, vero voluptate accusantium eveniet dolore quae repellendus consectetur laboriosam! ipsum dolor sit amet consectetur adipisicing elit. Sit temporibus veniam dolore earum reprehenderit, architecto quis dolorum adipisci error doloribus nulla perferendis beatae cum a. Consequatur odio sint obcaecati quidem? ipsum dolor sit amet consectetur, adipisicing elit. Placeat, voluptate.</dd>
-                <dd><a href="#">상세내용 더보기</a></dd>
-              </dl>
-            </li>
-            <li>
-              <dl>
-                <dt>issue title text 02</dt>
-                <dd>Lorem ipsum dolor sit amet consectetur.</dd>
-                <dd><a href="#">상세내용 더보기</a></dd>
-              </dl>
-            </li>
-            <li>
-              <dl>
-                <dt>issue title text 03</dt>
-                <dd>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</dd>
-                <dd><a href="#">상세내용 더보기</a></dd>
-              </dl>
-            </li>
-            <li>
-              <dl>
-                <dt>issue title text 04</dt>
-                <dd>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, voluptate.</dd>
-                <dd><a href="#">상세내용 더보기</a></dd>
-              </dl>
-            </li>
-          </ul>
-        </div>
-        </div>
-      </div>
-
-
-      <div class="issue_icon">
-        <h3 class="hidden_context">새로운 메뉴 이야기</h3>
-      </div>
+      <!-- ./monfee/issueBox.html 문서 호출 -->
     </article>
     <!--// #issueBox -->
     <article id="conBox">
