--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -40,6 +40,7 @@
       <h2>샘플 예제</h2>
       <ul>
         <li><a href="./ex_01_accordion.html">아코디언메뉴</a></li>
+        <li><a href="./ex_02_slideBtnBanner.html">좌우버튼 슬라이드배너</a></li>
       </ul>
     </article>
 
