--- a/c_code/e_jquery/html/ex_02_slideBtnBanner.html
+++ b/c_code/e_jquery/html/ex_02_slideBtnBanner.html
@@ -30,6 +30,7 @@
   <h1><a href="./">jQuery</a></h1>
 
   <hr />
+  <!-- ============================================== -->
   <div class="part slide_01">
     <h2>좌,우 슬라이드 배너 만들기</h2>
     <div class="slide_btn">
@@ -48,7 +49,27 @@
       </ul>
     </div>
   </div>
+  <!-- ============================================== -->
+  <div class="part slide_02">
+    <h2>좌,우 슬라이드 배너 만들기 <br />- fade처리되는 배너</h2>
+    <div class="slide_btn">
+      <button type="button" class="next"><span class="hidden_context">다음내용</span>
+        <i class="fas fa-chevron-circle-right"></i></button>
+      <button type="button" class="prev"><span class="hidden_context">이전내용</span>
+        <i class="fas fa-chevron-circle-left"></i></button>
+    </div>
+    <div class="slide_wrap">
+      <ul>
+        <li class="cake_01"><a href="#">상품명_01</a></li>
+        <li class="cake_02"><a href="#">상품명_02</a></li>
+        <li class="cake_03"><a href="#">상품명_03</a></li>
+        <li class="cake_04"><a href="#">상품명_04</a></li>
+        <li class="cake_05"><a href="#">상품명_05</a></li>
+      </ul>
+    </div>
+  </div>
 </div>
+  <!-- ============================================== -->
 
   <!-- script -->
   <script src="../js/base/jquery-3.5.1.js"></script>
