fade slide next-button

--- a/c_code/e_jquery/html/ex_02_slideBtnBanner.html
+++ b/c_code/e_jquery/html/ex_02_slideBtnBanner.html
@@ -39,7 +39,7 @@
       <button type="button" class="prev"><span class="hidden_context">이전내용</span>
         <i class="fas fa-chevron-circle-left"></i></button>
     </div>
-    <div class="slide_wrap">
+    <div class="slide_wrap horizontal_slide">
       <ul>
         <li class="cake_01"><a href="#">상품명_01</a></li>
         <li class="cake_02"><a href="#">상품명_02</a></li>
@@ -58,9 +58,9 @@
       <button type="button" class="prev"><span class="hidden_context">이전내용</span>
         <i class="fas fa-chevron-circle-left"></i></button>
     </div>
-    <div class="slide_wrap">
+    <div class="slide_wrap index_slide">
       <ul>
-        <li class="cake_01"><a href="#">상품명_01</a></li>
+        <li class="cake_01 action"><a href="#">상품명_001</a></li>
         <li class="cake_02"><a href="#">상품명_02</a></li>
         <li class="cake_03"><a href="#">상품명_03</a></li>
         <li class="cake_04"><a href="#">상품명_04</a></li>
@@ -75,5 +75,6 @@
   <script src="../js/base/jquery-3.5.1.js"></script>
   <script src="../js/base/jquery-ui.js"></script>
   <script src="../js/src/ex_02_slideBtnBanner.js"></script>
+  <script src="../js/src/ex_02_slideBtnBanner2.js"></script>
 </body>
 </html>
