slide indicator 클릭처리

--- a/c_code/e_jquery/html/ex_02_slideBtnBanner.html
+++ b/c_code/e_jquery/html/ex_02_slideBtnBanner.html
@@ -108,5 +108,6 @@
   <script src="../js/src/ex_02_slideBtnBanner.js"></script>
   <script src="../js/src/ex_02_slideBtnBanner2.js"></script>
   <script src="../js/src/ex_02_slideBtnBanner3.js"></script>
+  <!-- <script src="../js/src/ex_02_slideBtnBanner3-1.js"></script> -->
 </body>
 </html>
